# Libtorch-Multi-Person-Pose-Estimation

./: CMakeLists.txt  Darknet.h  README.md  Sppe.cpp  Sppe.h  main.cpp  model_trace.py
archieve/: archieved_main(19.12.2019).cpp  archieved_main(20.12.2019).cpp
